# CIMA_COMP

./: .gitattributes  .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
CIM_TC_open.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Model2IR/: .gitignore  README.md  setup.cfg
Model2IR/onnx2ir/: converter.py  helper.py  parser.py  passop.py  shape_inferece.py  shape_operation.py
Model2IR/pytorch2ir/: convert_to_onnx.py  converter.py  helper.py  parser.py
backend/: .gitignore  README.md  setup.cfg
backend/cis/: gen_code.py
backend/torch_script/: gen_code.py
cimruntime/: .gitignore  README.md  cimtensor.py  gen_weight.py  math.py  multiprocess_crt.py  numpy.py  quant.py  setup.cfg  torch.py
irtool/: .gitignore  README.md  __init__.py  setup.cfg
irtool/cmd/: __main__.py  base.py  compare_data.py  ir_dot.py  run_ir.py
irtool/core/: ir.py  layer.py
irtool/devices/: rram.py
irtool/doc/: api.md  devel.md  manual.md  spec.md
irtool/examples/: .gitignore  make-ir.py
irtool/ops/: __init__.py  abs.py  expand.py  math.py  norm.py  resize.py  slice.py
irtool/runtime/: __init__.py  base.py  ir_runner.py  math.py  numpy.py  rt_tests.py  tensorflow.py  test_numpy_tensorflow.py  test_numpy_torch.py  test_shape_inferer.py  torch.py
irtool/tools/: graph.py  infer_shapes.py  layer_graph.py  loop.py
mapper/: .gitignore  README.md  helper.py  mapper.py  parser.py  setup.cfg
mapper/device/: CIMA.py  __init__.py
mapper/esti_model/: HARNSC.py  IDEALSC.py  NumEst.py  __init__.py
optimizer/: .gitignore  README.md  setup.cfg
(+224 files in other folders)
