[metadata]
name = CIM_TC_open
version = 0.1
description = Aggregated distribution for CIM_TC_open monorepo.

[options]
python_requires = >=3.9
install_requires =
    numpy
    onnx
    onnxruntime
    pyyaml
    scipy
    torch
    graphviz
    matplotlib
packages = find_namespace:
include_package_data = True

[options.packages.find]
where = .
exclude =
    *.egg-info
    *.egg-info.*
    *.git
    *.git.*
    test
    tests
    test.*
    tests.*

[options.package_data]
* =
    *.json
    *.yaml
    *.yml

